hard-gists/691e97ce22f7cd43d6a9d54305344587/run.log
=== Docker Run Log for 691e97ce22f7cd43d6a9d54305344587 ===
Started at: Mi 29. Okt 16:44:58 CET 2025

[2025-10-29 16:44:59] START: Running container for 691e97ce22f7cd43d6a9d54305344587
[2025-10-29 16:44:59] SUCCESS: Container 4456e259584875630e3a8a9e7ac333348c17354b915dc6fe894bb04b1014498b started for 691e97ce22f7cd43d6a9d54305344587
=== Container logs for 691e97ce22f7cd43d6a9d54305344587 ===
  File "/snippet.py", line 39
    except Exception, err:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 691e97ce22f7cd43d6a9d54305344587 ===
[2025-10-29 16:45:01] INFO: Container 4456e259584875630e3a8a9e7ac333348c17354b915dc6fe894bb04b1014498b has stopped
